remove: unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ node_modules
 build
 coverage
 coverage.json
+
 /.coverage_artifacts/
 /.coverage_contracts/
 /coverageEnv/
 /coverageEnv/
+artifacts
